z-index fixed for main page in css

--- a/MVCMidtermProject/WebContent/css/Main.css
+++ b/MVCMidtermProject/WebContent/css/Main.css
@@ -18,10 +18,13 @@
 .space {margin-left:15px}
 
   .mainpic{
+    position: relative;
+ 
   z-index: -1;
   }  
   
   .homeparagraph { 
+  position: absolute;
   z-index: 2;
   text-align: left;
   }
